fix minor issues

--- a/SundaneseExperiment/SD_Configuration.json
+++ b/SundaneseExperiment/SD_Configuration.json
@@ -3,8 +3,8 @@
     "expName":"SD_V0",
     "wid" : "", 
     "data_path":"data/", 
-    "model_weights_path":"data/",
-    "visualisation_folder":"viz_output/",
+    "model_weights_path":"SundaneseExperiment/weights",
+    "visualisation_folder":"SundaneseExperiment/vis_output/",
     "learning_rate":0.0008,
     "weight_logging_interval":3,
     "imgsize":256,
